# toon-ai

./: README.md  pyproject.toml
tests/: test_4b_model.py  test_openai_model.py  test_text_strategy_parsing.py
toon_ai/: __init__.py  main.py
toon_ai/core/: __init__.py  client.py  exceptions.py  logger.py  requests.py
toon_ai/processing/: __init__.py  prompting.py  response.py  toon.py
toon_ai/strategies/: __init__.py  abstract.py  text.py
