[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["toon_ai"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/tests",
    "/examples",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "toon-ai"
version = "0.0.1"
description = "Structured output generation using the TOON format, built on Instructor."
authors = [{name = "Hammad Saeed", email = "hvmmad@gmail.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "instructor>=1.14.5",
    "litellm>=1.81.15",
    "toon-format>=0.9.0b1",
]

[dependency-groups]
dev = [
    "pre-commit",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",
]

[tool.uv.build-backend]
source-exclude = ["docs*", "tests*"]
wheel-exclude = ["docs*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"
